# pyphish

./: Dockerfile  README.md  analyzer.py  code_analyzer.py  detector.py  docker-compose.yml  lists.py  main.py  pyproject.toml  requirements.txt  run-dev.sh
cache/: database.txt  openphish.txt
extension/: README.md  manifest.json
extension/background/: api.js  background.js  state.js
extension/content/: behavior.js  detector.js  overlay.css
extension/shared/: constants.js  messages.js
extension/ui/: options.css  options.html  options.js  popup.css  popup.html  popup.js  warning.css  warning.html  warning.js
static/: google-search-info.html  static.css  test-email-links.html  test-hover.html
templates/: index.html  test_malicious_code.html
