[project]
name = "pyphish"
version = "0.1.0"
description = "Phishing detection system written in Python"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blinker==1.9.0",
    "certifi==2025.10.5",
    "charset-normalizer==3.4.4",
    "click==8.3.0",
    "flask==3.1.2",
    "idna==3.11",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "requests==2.32.5",
    "urllib3==2.5.0",
    "werkzeug==3.1.3",
]
